// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders a closed sidebar 1`] = `
<DocumentFragment>
  <div
    class="sidebar sidebar-light sidebar-sm"
  />
</DocumentFragment>
`;

exports[`Sidebar renders a sidebar with a header with title and subtitle 1`] = `
<DocumentFragment>
  <div
    class="sidebar sidebar-light sidebar-sm"
  >
    <div
      class="sidebar-header"
    >
      <div
        class="sidebar-section autofit-row"
      >
        <div
          class="autofit-col autofit-col-expand"
        >
          <div
            class="component-title text-truncate-inline"
          >
            <span
              class="text-truncate"
            >
              Title
            </span>
          </div>
          <p
            class="component-subtitle"
          >
            Subtitle
          </p>
        </div>
        <div
          class="autofit-col"
        >
          <button
            class="btn btn-monospaced btn-sm btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times-small"
              role="presentation"
            >
              <use
                xlink:href="#times-small"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar renders a sidebar with body with custom content 1`] = `
<DocumentFragment>
  <div
    class="sidebar sidebar-light sidebar-sm"
  >
    <div
      class="sidebar-body"
    >
      <div>
        Custom content text
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sidebar renders an open sidebar 1`] = `
<DocumentFragment>
  <div
    class="sidebar sidebar-light sidebar-sm"
  />
</DocumentFragment>
`;
